--- a/allifmaalcommonapp/templates/allifmaalcommonapp/includes/links/collapse-links.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/includes/links/collapse-links.html
@@ -1,8 +1,10 @@
 <!--START......... Start of collapsible sectioon..........-->
   <div class="container-fluid allif-collapsible-details-section-links-wrapper">
-    <a class="dropdown-toggle allif-collapsible-details-section-links" type="button" data-bs-toggle="collapse" data-bs-target="#allif-collapsible-details-section-one" aria-expanded="false" aria-controls="allif-collapsible-details-section-one">Core Details</a>
-    <a class="dropdown-toggle allif-collapsible-details-section-links" type="button" data-bs-toggle="collapse" data-bs-target="#allif-collapsible-details-section-two" aria-expanded="false" aria-controls="allif-collapsible-details-section-two">Standard Details</a>
-    <a class="dropdown-toggle allif-collapsible-details-section-links" type="button" data-bs-toggle="collapse" data-bs-target="#allif-collapsible-details-section-three" aria-expanded="false" aria-controls="allif-collapsible-details-section-three">General Details</a>
-    <a class="dropdown-toggle allif-collapsible-details-section-links" type="button" data-bs-toggle="collapse" data-bs-target="#allif-collapsible-details-section-four" aria-expanded="false" aria-controls="allif-collapsible-details-section-four">Static Details</a>
+    <a class="dropdown-toggle allif-collapsible-details-section-links" type="button" data-bs-toggle="collapse" data-bs-target="#allif-collapsible-core-details" aria-expanded="false" aria-controls="allif-collapsible-core-details">Show Core Details</a>
+    <a class="dropdown-toggle allif-collapsible-details-section-links" type="button" data-bs-toggle="collapse" data-bs-target="#allif-collapsible-standard-details" aria-expanded="false" aria-controls="allif-collapsible-standard-details">Show Standard Details</a>
+    <a class="dropdown-toggle allif-collapsible-details-section-links" type="button" data-bs-toggle="collapse" data-bs-target="#allif-collapsible-general-details" aria-expanded="false" aria-controls="allif-collapsible-general-details">Show General Details</a>
+    <a class="dropdown-toggle allif-collapsible-details-section-links" type="button" data-bs-toggle="collapse" data-bs-target="#allif-collapsible-static-details" aria-expanded="false" aria-controls="allif-collapsible-static-details">Show Static Details</a>
+
 
   </div>
+ 
