--- a/allifmaalcommonapp/templates/allifmaalcommonapp/operations/categories/add-category.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/operations/categories/add-category.html
@@ -97,19 +97,19 @@
             </tr>
           <tr>
           <td class="allif-fix-table-col">Start Date</td>
-          <td>{{form.start_date}}</td>
+          <td>{{form.starts}}</td>
       
           </tr>
           <tr>
           <td class="allif-fix-table-col">End Date</td>
-          <td>{{form.end_date}}</td>
+          <td>{{form.ends}}</td>
       
           </tr>
               
         
           <tr>
           <td class="allif-fix-table-col">Status</td>
-          <td>{{form.is_current}}</td>
+          <td>{{form.status}}</td>
       
           </tr>
          
@@ -209,12 +209,12 @@
         <tbody>
           <tr>
           <td class="allif-fix-table-col">Start Date</td>
-          <td>{{form.start_date}}</td>
+          <td>{{form.starts}}</td>
       
           </tr>
           <tr>
           <td class="allif-fix-table-col">End Date</td>
-          <td>{{form.end_date}}</td>
+          <td>{{form.ends}}</td>
       
           </tr>
           
@@ -249,7 +249,7 @@
           </tr>
           <tr>
           <td class="allif-fix-table-col">Status</td>
-          <td>{{form.is_current}}</td>
+          <td>{{form.status}}</td>
       
           </tr>
          
