--- a/allifmaalcommonapp/templates/allifmaalcommonapp/spaces/space-details.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/spaces/space-details.html
@@ -82,7 +82,7 @@
             </tr>
                <tr>
           <td class="allif-fix-table-col">Space Number</td>
-          <td>{{allifquery.space_number}}</td>
+          <td>{{allifquery.number}}</td>
       
           </tr>
         <tr>
