--- a/allifmaalcommonapp/templates/allifmaalcommonapp/spaces/spaces.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/spaces/spaces.html
@@ -60,7 +60,7 @@
           <tr data-id="{{item.id}}">
           <td class="allif-fix-table-col"><a class="allif-table-links" href="{% url 'allifmaalcommonapp:commonSpaceDetails' item.id user_var glblslug %}">{{item.name}}</a></td>
           <td>
-            {{item.space_number}}
+            {{item.number}}
            </td>
             <td>
             {{item.asset}}
