--- a/allifmaalcommonapp/templates/allifmaalcommonapp/spaces/units/add_space_unit.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/spaces/units/add_space_unit.html
@@ -72,7 +72,7 @@
             </tr>
          <tr>
           <td class="allif-fix-table-col">Unit Number</td>
-          <td>{{form.space_number}}</td>
+          <td>{{form.number}}</td>
         </tr>
         <tr>
           <td class="allif-fix-table-col">Name</td>
@@ -234,7 +234,7 @@
             </tr>
          <tr>
           <td class="allif-fix-table-col">Unit Number</td>
-          <td>{{form.space_number}}</td>
+          <td>{{form.number}}</td>
         </tr>
         <tr>
           <td class="allif-fix-table-col">Name</td>
