--- a/allifmaalcommonapp/templates/allifmaalcommonapp/spaces/units/space_unit_details.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/spaces/units/space_unit_details.html
@@ -84,7 +84,7 @@
             </tr>
          <tr>
           <td class="allif-fix-table-col">Unit Number</td>
-          <td>{{allifquery.space_number}}</td>
+          <td>{{allifquery.number}}</td>
         </tr>
         <tr>
           <td class="allif-fix-table-col">Name</td>
