--- a/allifmaalcommonapp/templates/allifmaalcommonapp/spaces/units/space_units.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/spaces/units/space_units.html
@@ -75,7 +75,7 @@
           <td class="allif-fix-table-col"><a class="allif-table-links" href="{% url 'allifmaalcommonapp:commonSpaceUnitDetails' item.id user_var glblslug %}">{{item.name}}</a></td>
          
             <td>
-            {{item.space_number}}
+            {{item.number}}
            </td>
             <td>
             {{item.space}}
