--- a/allifmaalcommonapp/templates/allifmaalcommonapp/stocks/add-stock.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/stocks/add-stock.html
@@ -102,7 +102,7 @@
          
               <tr>
                 <td class="allif-fix-table-col">Part Number</td>
-                <td>{{form.partNumber}}</td>
+                <td>{{form.number}}</td>
             
                 </tr>
           <tr>
@@ -264,7 +264,7 @@
         </tr>
          <tr>
             <td class="allif-fix-table-col">Part Number</td>
-            <td>{{form.partNumber}}</td>
+            <td>{{form.number}}</td>
         
             </tr>
           <tr>
