--- a/allifmaalcommonapp/templates/allifmaalcommonapp/currencies/add_currency.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/currencies/add_currency.html
@@ -6,204 +6,132 @@
 {% block style %}
 {%endblock%}
 {% block body %}
+
 <div class="allifmaal-main-container">
- 
-<!--start....main headere-->
-<div class="card-header">
 
-<div class="row mt-12" ><!--start....header row-->
-
-<div class="col-md-12"><!--start....header column-->
-
-<div class="container-fluid amel-content-header">
-
-  <a href="{% url 'allifmaalcommonapp:commonHome' user_var glblslug %}">Home</a>
+<div class="allif-header-main-wrapper">
+ <!--... START OF HEADER.... -->
+{% include 'allifmaalcommonapp/includes/headers/header-upper-section.html' %}
   <a href="{% url 'allifmaalcommonapp:commonCurrencies' user_var glblslug %}">Currencies</a>
   <a href="{% url 'allifmaalcommonapp:commonAddCurrency' user_var glblslug %}">New Currency</a>
    
-
+{% include 'allifmaalcommonapp/includes/headers/header-lower-section.html' %}
+ <!--... ENDT OF HEADER.... -->
 </div>
-
-    </div><!--end....header column-->
-  
-  </div><!--end....header row-->
-
-</div><!--end....main headere-->
-
 
   <div class="allifmaincontainer">
-{% if allifquery_update %}
-<div class="row mt-12"> <!--start....table row-->
-  <div class="table-details-content-description">Edit Currency</div>
-  <form method='POST' action=''>{% csrf_token %}
-  <div class="col-md-12"> <!--start....table column-->
-  <div class="allif-scroll-table">
-    <div class="allif-info-tables">
-      <div class="row"><!--start of row div --->
-  <!--start of column two-->
-  <div class="col-md-4">
-    
-      <!--start of the table here-->
-      <div class="table-responsive">
-      <table class="table table-layout">
-      <tbody>
 
-      <tr>
-        <td class="allif-fix-table-col">Division</td>
-        <td>{{form.division}}</td>
-    
-        </tr>
-        
+ <!--START.... start of single pages content and its links section-->
+<div class="allif-single-page-tabs-contents-main-wrapper" >
+ {% include 'allifmaalcommonapp/includes/links/single-page-links.html' %}
+    <!--start of singple page contents-->
+    <div class="tab-content allif-single-page-tab-content-wrapper" id="allif-single-page-tab-content-wrapper-id">
+
+       <!--START.. Start of show/hide table section one-->
+      <div class="tab-pane allif-single-page-tab-content-pane show active" id="allif-single-page-tab-core-details" role="tabpanel" aria-labelledby="allif-single-page-tab-core-details-id">
+        <form method='POST' action=''>{% csrf_token %}
+
+        <div class="allif-forms-table-main-wrapper">
+         {% include 'allifmaalcommonapp/includes/forms/two-column-forms-table-column-one-section.html' %}
+
         <tr>
-          <td class="allif-fix-table-col">Branch</td>
-          <td>{{form.branch}}</td>
-      
-          </tr>
-         
-           
-        </tbody>
-        </table>
-      </div>
-        </div>
-           
+        <td>Currency Name</td>
+        <td>{{form.name}}</td>
+      </tr>
+    {% include 'allifmaalcommonapp/includes/forms/two-column-forms-table-column-two-section.html' %}
+
+    <tr>
+      <td>Currency Description</td>
+      <td>{{form.description}}</td>
+    </tr>
+
+    {% include 'allifmaalcommonapp/includes/forms/two-column-forms-table-column-two-last-section.html' %}
     
-     <!--start of column two-->
-     <div class="col-md-4">
-       <!--start of the table here-->
-       <div class="allif-details-card table-responsive">
-       <table class="table table-layout">
-        <tbody>
-        
-          <tr>
-            <td class="allif-fix-table-col">Department</td>
-            <td>{{form.department}}</td>
-        
-            </tr>
-              <tr>
-                <td class="allif-fix-table-col">Description</td>
-                <td>{{form.description}}</td>
-            
-                </tr>
-          
-          </tbody>
-          </table>
-          </div>
-          </div>
-    
-    
-     <!--start of column two-->
-     <div class="col-md-4">
-      <div class="allif-details-card table-responsive">
-       <!--start of the table here-->
-       <table class="table table-layout">
-        <tbody>
-       
-              <tr>
-                <td class="allif-fix-table-col">Comments</td>
-                <td>{{form.comments}}</td>
-            
-                </tr>
-            <tr>
-              <td class="allif-fix-table-col">Action</td>
-              <td> <input type="submit" value='Save' class="btn btn-success allifmaal-submit-btn"></td>
-          
-              </tr>
-          </tbody>
-          </table>
-  </div>
     </div>
-    </div><!--end of row div --->
-      
-        </div>
+  </div>
+       <!--END... End of show/hide table more details section one..ok...hree....-->
 
-</div><!--end....table row-->
-</div>
-</form>
-<!--end of table-->
 
-</div><!--end of main container of the page....-->
-{% else %}
-<div class="row mt-12"> <!--start....table row-->
-  <div class="table-details-content-description">Add New Currency</div>
-  <form method='POST' action=''>{% csrf_token %}
-  <div class="col-md-12"> <!--start....table column-->
-  <div class="allif-scroll-table">
-    <div class="allif-info-tables">
-      <div class="row"><!--start of row div --->
-  <!--start of column two-->
-  <div class="col-md-4">
-    
-      <!--start of the table here-->
-      <div class="table-responsive">
-      <table class="table table-layout">
-      <tbody>
+ <!--START.. Start of show/hide table section one-->
+    <div class="tab-pane allif-single-page-tab-content-pane show" id="allif-single-page-tab-standard-details" role="tabpanel" aria-labelledby="allif-single-page-tab-standard-details-id">
+      <div class="allif-forms-table-main-wrapper">
+      {% include 'allifmaalcommonapp/includes/forms/two-column-forms-table-column-one-section.html' %}
       <tr>
-        <td class="allif-fix-table-col">Description</td>
+        <td>Comments</td>
+        <td>{{form.comments}}</td>
+      </tr>
+
+      {% include 'allifmaalcommonapp/includes/forms/two-column-forms-table-column-two-section.html' %}
+
+      <tr>
+        <td>Description</td>
         <td>{{form.description}}</td>
-    
-        </tr>
-     
-        </tbody>
-        </table>
-      </div>
-        </div>
-           
-    
-     <!--start of column two-->
-     <div class="col-md-4">
-       <!--start of the table here-->
-       <div class="allif-details-card table-responsive">
-       <table class="table table-layout">
-        <tbody>
-        
-        <tr>
-          <td class="allif-fix-table-col">Comments</td>
-          <td>{{form.comments}}</td>
+      </tr>
+
+      {% include 'allifmaalcommonapp/includes/forms/two-column-forms-table-column-two-last-section.html' %}
       
-          </tr>
-        
-          </tbody>
-          </table>
-          </div>
-          </div>
-    
-    
-     <!--start of column two-->
-     <div class="col-md-4">
-      <div class="allif-details-card table-responsive">
-       <!--start of the table here-->
-       <table class="table table-layout">
-        <tbody>
-         
-         
-            <tr>
-              <td class="allif-fix-table-col">Action</td>
-              <td> <input type="submit" value='Save' class="btn btn-success allifmaal-submit-btn"></td>
-          
-              </tr>
-          </tbody>
-          </table>
-  </div>
+     {% include 'allifmaalcommonapp/includes/forms/standard-form-fields.html' %}
+     </div>
     </div>
-    </div><!--end of row div --->
+       <!--END... End of show/hide table more details section one-->
+
+  <div class="tab-pane allif-single-page-tab-content-pane show" id="allif-single-page-tab-general-details" role="tabpanel" aria-labelledby="allif-single-page-tab-general-details-id">
+    <div class="allif-forms-table-main-wrapper">
+    {% include 'allifmaalcommonapp/includes/forms/two-column-forms-table-column-one-section.html' %}
+
+    <tr>
+      <td>Desccription</td>
+      <td>{{form.description}}</td>
+    </tr>
+    {% include 'allifmaalcommonapp/includes/forms/two-column-forms-table-column-two-section.html' %}
+
+    <tr>
+      <td>Comments</td>
+      <td>{{form.comments}}</td>
+    </tr>
+
+    {% include 'allifmaalcommonapp/includes/forms/two-column-forms-table-column-two-last-section.html' %}
+    
+    {% include 'allifmaalcommonapp/includes/forms/general-form-fields.html' %}
+     </div>
+    </div>
+       <!--END... End of show/hide table more details section one-->
+
+    <div class="tab-pane allif-single-page-tab-content-pane show" id="allif-single-page-tab-static-details" role="tabpanel" aria-labelledby="allif-single-page-tab-static-id">
+     <div class="allif-forms-table-main-wrapper">
+    {% include 'allifmaalcommonapp/includes/forms/static-form-fields.html' %}
+     </div>
+    </div>
+       <!--END... End of show/hide table more details section one-->
+  
+    <div class="allif-forms-table-main-wrapper">
       
+    {% include 'allifmaalcommonapp/includes/forms/two-column-forms-table-column-one-section.html' %}
+      <tr>
+        <td>Currency Name</td>
+        <td>{{form.name}}</td>
+      </tr>
+    {% include 'allifmaalcommonapp/includes/forms/two-column-forms-table-column-two-section.html' %}
+
+      
+    {% include 'allifmaalcommonapp/includes/forms/forms-save-button.html' %}  
+    {% include 'allifmaalcommonapp/includes/forms/two-column-forms-table-column-two-last-section.html' %}
+
+      </div>
+      
+      </form>
         </div>
 
-</div><!--end....table row-->
-</div>
-</form>
-<!--end of table-->
+      </div>
+      <!--END.... END of single pages content and its links section-->
+   
 
-</div><!--end of main container of the page....-->
-{% endif %}
-
-
-
-</div>
+    </div>
 
 </div>
   {% block scripts %}
 
+  
   {% endblock %}
    {% endblock %}
    
