--- a/allifmaalcommonapp/templates/allifmaalcommonapp/spaces/add-space.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/spaces/add-space.html
@@ -72,7 +72,7 @@
           </tr>
              <tr>
           <td class="allif-fix-table-col">Space Number</td>
-          <td>{{form.space_number}}</td>
+          <td>{{form.number}}</td>
       
           </tr>
         <tr>
@@ -236,7 +236,7 @@
       <tbody>
          <tr>
           <td class="allif-fix-table-col">Space Number</td>
-          <td>{{form.space_number}}</td>
+          <td>{{form.number}}</td>
       
           </tr>
         <tr>
