--- a/allifmaalcommonapp/templates/allifmaalcommonapp/stocks/stocks.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/stocks/stocks.html
@@ -137,7 +137,7 @@
         
         {% for item in allifqueryset %} 
         <tr data-id="{{item.id}}">
-        <td class="allif-fix-table-col"><a class="allif-table-links" href="{% url 'allifmaalcommonapp:commonStockItemDetails' item.id user_var glblslug %}">{{item.partNumber}}</a></td>
+        <td class="allif-fix-table-col"><a class="allif-table-links" href="{% url 'allifmaalcommonapp:commonStockItemDetails' item.id user_var glblslug %}">{{item.number}}</a></td>
        
           <td>
           {{item.description}}
