--- a/allifmaalcommonapp/templates/allifmaalcommonapp/customers/add-customer.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/customers/add-customer.html
@@ -122,6 +122,12 @@
                         <td>{{form.contact}}</td>
                     
                         </tr>
+
+                          <tr>
+                        <td class="allif-fix-table-col">Status</td>
+                        <td>{{form.status}}</td>
+                    
+                        </tr>
         
           </tbody>
           </table>
