--- a/allifmaalcommonapp/templates/allifmaalcommonapp/customers/customer-details.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/customers/customer-details.html
@@ -200,7 +200,11 @@
         
             </tr>
 
-          
+           <tr>
+            <td class="allif-fix-table-col">Status</td>
+            <td>{{allifquery.status}}</td>
+        
+            </tr>
       
           <tr>
             <td class="allif-fix-table-col">Date</td>
