--- a/allifmaalshaafiapp/templates/allifmaalshaafiapp/triage/triage_data.html
+++ b/allifmaalshaafiapp/templates/allifmaalshaafiapp/triage/triage_data.html
@@ -95,6 +95,8 @@
    
     <a href="{% url 'allifmaalshaafiapp:shaafiHome' user_var glblslug %}">Home</a>
    <a href="{% url 'allifmaalcommonapp:commonTransactions' user_var glblslug %}">Transactions</a>
+<a href="{% url 'allifmaalshaafiapp:allTriageData' user_var glblslug %}">View All</a>
+   
    
   </div>
   
