--- a/allifmaalshaafiapp/templates/allifmaalshaafiapp/triage/add_triage_data.html
+++ b/allifmaalshaafiapp/templates/allifmaalshaafiapp/triage/add_triage_data.html
@@ -14,13 +14,128 @@
 {% include 'allifmaalcommonapp/includes/headers/header-upper-section.html' %}
 <a href="{% url 'allifmaalshaafiapp:triageData' user_var glblslug %}">Triage Records</a>
 <a href="{% url 'allifmaalshaafiapp:prescriptions' user_var glblslug %}">Prescriptions</a>
-
-
 {% include 'allifmaalcommonapp/includes/headers/header-lower-section.html' %}
  <!--... ENDT OF HEADER.... -->
 </div>
+
   <div class="allifmaincontainer">
 
+  <div class="allif-form-main-wrapper">
+    <div class="table-details-content-description">Add {{allifquery_update}} Details</div>
+ <form method='POST' action=''>{% csrf_token %}
+  <div class="allif-forms-table-main-wrapper">
+
+  <div class="row mt-12"> <!--start....table row-->
+ 
+  <div class="col-md-12"> <!--start....table column-->
+  <div class="allif-scroll-table">
+    <div class="allif-info-tables">
+      <div class="row"><!--start of row div --->
+  <!--start of column two-->
+  <div class="col-md-2">
+    
+      <!--start of the table here-->
+      <div class="table-responsive">
+      <table class="table table-layout">
+      <tbody>
+      
+      <tr>
+        <td class="allif-fix-table-col-forms">Systolic</td>
+        <td>{{form.blood_pressure_diastolic}}</td>
+    
+        </tr>
+      
+        </tbody>
+        </table>
+      </div>
+        </div>
+    
+     <!--start of column two-->
+     <div class="col-md-2">
+       <!--start of the table here-->
+       <div class="allif-details-card table-responsive">
+       <table class="table table-layout">
+        <tbody>
+           <tr>
+            <td class="allif-fix-table-col-forms">Diastolic</td>
+            <td>{{form.blood_pressure_diastolic}}</td>
+            </tr>
+        
+          </tbody>
+          </table>
+          </div>
+          </div>
+
+            <!--start of column two-->
+     <div class="col-md-2">
+       <!--start of the table here-->
+       <div class="allif-details-card table-responsive">
+       <table class="table table-layout">
+        <tbody>
+          <tr>
+            <td class="allif-fix-table-col-forms">Temperatrue</td>
+            <td>{{form.temperature}}</td>
+          </tr>
+          </tbody>
+          </table>
+          </div>
+          </div>
+
+           <div class="col-md-2">
+       <!--start of the table here-->
+       <div class="allif-details-card table-responsive">
+       <table class="table table-layout">
+        <tbody>
+          <tr>
+            <td class="allif-fix-table-col-forms">Weight</td>
+            <td>{{form.weight}}</td>
+          </tr>
+          </tbody>
+          </table>
+          </div>
+          </div>
+
+           <div class="col-md-2">
+       <!--start of the table here-->
+       <div class="allif-details-card table-responsive">
+       <table class="table table-layout">
+        <tbody>
+         
+          <tr>
+            <td class="allif-fix-table-col-forms">Height</td>
+            <td>{{form.height}}</td>
+          </tr>
+          </tbody>
+          </table>
+          </div>
+          </div>
+     <!--start of column two-->
+     <div class="col-md-2">
+      <div class="allif-details-card table-responsive">
+       <!--start of the table here-->
+       <table class="table table-layout">
+        <tbody>
+        
+        <tr>
+          <td class="allif-fix-table-col-forms">Pulse</td>
+          <td>{{form.pulse_rate}}</td>
+        </tr>
+          
+          </tbody>
+          </table>
+  </div>
+    </div>
+    </div><!--end of row div --->
+      
+        </div>
+
+</div><!--end....table row-->
+</div>
+
+</div><!--end of main container of the page....-->
+
+      </div>
+      
  <!--START.... start of single pages content and its links section-->
 <div class="allif-single-page-tabs-contents-main-wrapper" >
  {% include 'allifmaalcommonapp/includes/links/single-page-links.html' %}
@@ -29,106 +144,41 @@
 
        <!--START.. Start of show/hide table section one-->
       <div class="tab-pane allif-single-page-tab-content-pane show active" id="allif-single-page-tab-core-details" role="tabpanel" aria-labelledby="allif-single-page-tab-core-details-id">
-        <form method='POST' action=''>{% csrf_token %}
-
+     
         <div class="allif-forms-table-main-wrapper">
         {% include 'allifmaalcommonapp/includes/forms/two-column-forms-table-column-one-section.html' %}
-     <tr>
-        <td class="allif-fix-table-col-forms">Systolic Pressure</td>
-        <td>{{form.blood_pressure_systolic}}</td>
-    
-        </tr>
-        <tr>
-            <td class="allif-fix-table-col-forms">Diastolic Pressure</td>
-            <td>{{form.blood_pressure_diastolic}}</td>
-        
-            </tr>
-             <tr>
-            <td class="allif-fix-table-col-forms">Temperature</td>
-            <td>{{form.temperature}}</td>
-        
-            </tr>
-            
-            <tr>
+     
+          <tr>
             <td class="allif-fix-table-col-forms">Allergies</td>
             <td>{{form.allergies}}</td>
         
-            </tr>
-            
+          </tr>
+          <tr>
+            <td class="allif-fix-table-col-forms">Chronic Conditions</td>
+            <td>{{form.known_chronic_conditions}}</td>
+        
+          </tr>
+          <tr>
+            <td class="allif-fix-table-col-forms">Medical History</td>
+            <td>{{form.past_medical_history}}</td>
+          </tr>
       {% include 'allifmaalcommonapp/includes/forms/two-column-forms-table-column-two-section.html' %}
-      <tr>
-            <td class="allif-fix-table-col-forms">Weight</td>
-            <td>{{form.weight}}</td>
-        
-            </tr>
-            
-            <tr>
-            <td class="allif-fix-table-col-forms">Height</td>
-            <td>{{form.height}}</td>
-        
-            </tr>
-            
-   <tr>
+    
+        <tr>
             <td class="allif-fix-table-col-forms">Complaints</td>
             <td>{{form.complaints}}</td>
-        
-            </tr>
-        
-         
+        </tr>
+     
       {% include 'allifmaalcommonapp/includes/forms/two-column-forms-table-column-two-last-section.html' %}
       
-     
     </div>
   </div>
        <!--END... End of show/hide table more details section one..ok...hree....-->
 
-
  <!--START.. Start of show/hide table section one-->
     <div class="tab-pane allif-single-page-tab-content-pane show" id="allif-single-page-tab-standard-details" role="tabpanel" aria-labelledby="allif-single-page-tab-standard-details-id">
       <div class="allif-forms-table-main-wrapper">
-      {% include 'allifmaalcommonapp/includes/forms/two-column-forms-table-column-one-section.html' %}
-     
-             <tr>
-            <td class="allif-fix-table-col-forms">Chronic Conditions</td>
-            <td>{{form.known_chronic_conditions}}</td>
-        
-            </tr>
-          <tr>
-            <td class="allif-fix-table-col-forms">Medical History</td>
-            <td>{{form.past_medical_history}}</td>
-        
-            </tr>
-  <tr>
-            <td class="allif-fix-table-col-forms">Oxygen Saturation</td>
-            <td>{{form.oxygen_saturation}}</td>
-        
-            </tr>
-            <tr>
-            <td class="allif-fix-table-col-forms">Resipration Rate</td>
-            <td>{{form.respiration_rate}}</td>
-        
-            </tr>
-             <tr>
-            <td class="allif-fix-table-col-forms">Pulse Rate</td>
-            <td>{{form.pulse_rate}}</td>
-        
-            </tr>
-           <tr>
-            <td class="allif-fix-table-col-forms">Current Medication</td>
-            <td>{{form.current_medication}}</td>
-        
-            </tr>
-             
-          
-
-      {% include 'allifmaalcommonapp/includes/forms/two-column-forms-table-column-two-section.html' %}
-
-     
-        <tr>
-        <td class="allif-fix-table-col-forms">Recorded By</td>
-        <td>{{form.staff}}</td>
-  
-      </tr>
+        {% include 'allifmaalcommonapp/includes/forms/three-column-forms-table-column-one-section.html' %}
           <tr>
           <td class="allif-fix-table-col-forms">Pain Level</td>
           <td>{{form.pain_level}}</td>
@@ -138,14 +188,17 @@
           <td class="allif-fix-table-col-forms">Triage Level</td>
           <td>{{form.triage_level}}</td>
         </tr>
-          <tr>
+      {% include 'allifmaalcommonapp/includes/forms/three-column-forms-table-column-two-section.html' %}
+        <tr>
           <td class="allif-fix-table-col-forms">Arrival Mode</td>
           <td>{{form.mode_of_arrival}}</td>
         </tr>
-          <tr>
+        <tr>
           <td class="allif-fix-table-col-forms">Mobility</td>
           <td>{{form.mobility_status}}</td>
         </tr>
+
+      {% include 'allifmaalcommonapp/includes/forms/three-column-forms-table-column-three-section.html' %}
           <tr>
           <td class="allif-fix-table-col-forms">Mental Status</td>
           <td>{{form.mental_status}}</td>
@@ -154,9 +207,8 @@
           <td class="allif-fix-table-col-forms">Triage Disposition</td>
           <td>{{form.triage_disposition}}</td>
         </tr>
-         
-         
-      {% include 'allifmaalcommonapp/includes/forms/two-column-forms-table-column-two-last-section.html' %}
+
+      {% include 'allifmaalcommonapp/includes/forms/three-column-forms-table-column-three-last-section.html' %}
       
      {% include 'allifmaalcommonapp/includes/forms/standard-form-fields.html' %}
      </div>
@@ -167,26 +219,28 @@
     <div class="allif-forms-table-main-wrapper">
     {% include 'allifmaalcommonapp/includes/forms/two-column-forms-table-column-one-section.html' %}
      
-  <tr>
-          <td class="allif-fix-table-col-forms">Treatment Plan</td>
-          <td>{{form.treatment_plan}}</td>
-        </tr>
-  
-
-    {% include 'allifmaalcommonapp/includes/forms/two-column-forms-table-column-two-section.html' %}
-<tr>
-          <td class="allif-fix-table-col-forms">Disposition Notes</td>
-          <td>{{form.disposition_notes}}</td>
-        </tr>
-      
     <tr>
-      <td class="allif-fix-table-col-forms">Quantity</td>
-      <td>{{form.quantity}}</td>
-    </tr>
+        <td class="allif-fix-table-col-forms">Treatment Plan</td>
+        <td>{{form.treatment_plan}}</td>
+      </tr>
+  
+    {% include 'allifmaalcommonapp/includes/forms/two-column-forms-table-column-two-section.html' %}
 
+      <tr>
+          <td class="allif-fix-table-col-forms">Oxygen Saturation</td>
+          <td>{{form.oxygen_saturation}}</td>
+      </tr>
+        <tr>
+          <td class="allif-fix-table-col-forms">Code</td>
+          <td>{{form.code}}</td>
+        </tr>
+        <tr>
+          <td class="allif-fix-table-col-forms">Number</td>
+          <td>{{form.number}}</td>
+        
+        </tr>
     {% include 'allifmaalcommonapp/includes/forms/two-column-forms-table-column-two-last-section.html' %}
     
-    {% include 'allifmaalcommonapp/includes/forms/general-form-fields.html' %}
      </div>
     </div>
        <!--END... End of show/hide table more details section one-->
@@ -200,36 +254,30 @@
   
     <div class="allif-forms-table-main-wrapper">
 
-        {% include 'allifmaalcommonapp/includes/forms/two-column-forms-table-column-one-section.html' %}
-     
-  <tr>
-          <td class="allif-fix-table-col-forms">Description</td>
-          <td>{{form.description}}</td>
-        </tr>
-  
-
-    {% include 'allifmaalcommonapp/includes/forms/two-column-forms-table-column-two-section.html' %}
-
-    
-     {% include 'allifmaalcommonapp/includes/forms/forms-save-button.html' %} 
-    {% include 'allifmaalcommonapp/includes/forms/two-column-forms-table-column-two-last-section.html' %}
+    {% include 'allifmaalcommonapp/includes/forms/three-column-forms-table-column-one-section.html' %}
+      <tr>
+        <td class="allif-fix-table-col-forms">Current Medication</td>
+        <td>{{form.current_medication}}</td>
+        
+      </tr>
+      {% include 'allifmaalcommonapp/includes/forms/three-column-forms-table-column-two-section.html' %}
+      <tr>
+        <td class="allif-fix-table-col-forms">Notes</td>
+        <td>{{form.disposition_notes}}</td>
+      </tr>
+      {% include 'allifmaalcommonapp/includes/forms/three-column-forms-table-column-three-section.html' %}
+      {% include 'allifmaalcommonapp/includes/forms/forms-save-button.html' %}  
+      {% include 'allifmaalcommonapp/includes/forms/three-column-forms-table-column-three-last-section.html' %}
     
       </div>
-      
     
-      </form>
         </div>
-
+         </form>
+  </div>
       </div>
       <!--END.... END of single pages content and its links section-->
-   
-
     </div>
-
 </div>
   {% block scripts %}
-
-  
   {% endblock %}
    {% endblock %}
-   
